--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Json\JsonUtil.cs" />
     <Compile Include="Assets\Scripts\Logic\UI\Panel\Updater\ViewModel\UpdaterModel.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\LccModel_DragEventTrigger_Binding.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Object\ProtobufObject.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Download\DownloadState.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Init\Init.cs" />
@@ -130,9 +131,9 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\UnityEngine_Networking_DownloadHandlerTextur.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\System_Collections_IDictionaryEnumerator_Bin.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Config\Config\TestConfig.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\UnityEngine_Mathf_Binding.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Mono\MonoManager.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Protobuf\ProtobufUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Download\DownloadManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\UnityEngine_QualitySettings_Binding.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\LccModel_Singleton_1_AudioManager_Binding.cs" />
@@ -233,7 +234,6 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\Generated\UnityEngine_Ray_Binding.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Event\AEvent.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Expand\Task\TaskExpand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Config\ConfigTable\TestConfigTable.cs" />
     <Compile Include="Assets\Scripts\Util\DoubleClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\LccViewFactory.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Download\DownloadData.cs" />
@@ -512,18 +512,6 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="NPOI">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.dll</HintPath>
-    </Reference>
-    <Reference Include="NPOI.OOXML">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.OOXML.dll</HintPath>
-    </Reference>
-    <Reference Include="NPOI.OpenXml4Net">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.OpenXml4Net.dll</HintPath>
-    </Reference>
-    <Reference Include="NPOI.OpenXmlFormats">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.OpenXmlFormats.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp">
       <HintPath>Assets\Plugins\Roslyn\Microsoft.CodeAnalysis.CSharp.dll</HintPath>
     </Reference>
@@ -574,6 +562,24 @@
     </Reference>
     <Reference Include="ILRuntime.Mono.Cecil.Pdb">
       <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.7\Plugins\ILRuntime.Mono.Cecil.Pdb.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI">
+      <HintPath>Assets\Plugins\NPOI\NPOI.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats">
+      <HintPath>Assets\Plugins\NPOI\NPOI.OpenXmlFormats.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OOXML">
+      <HintPath>Assets\Plugins\NPOI\NPOI.OOXML.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net">
+      <HintPath>Assets\Plugins\NPOI\NPOI.OpenXml4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="BouncyCastle.Crypto">
+      <HintPath>Assets\Plugins\BouncyCastle\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>Assets\Plugins\SharpZipLib\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\2020.1.8f1c1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
