--- a/Unity.Editor.csproj
+++ b/Unity.Editor.csproj
@@ -60,19 +60,17 @@
     <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\MenuTree\AMenuEditorWindow.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectTypeUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\AssetEditorWindowBase.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\MenuItem\ILRuntime\ILRuntimeCLRBindingMenuItem.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\MenuItem\ILRuntime\ILRuntimeCrossBindingMenuItem.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\AssetBundle\AssetBundleSetting.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Link\LinkUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\RectObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\AssetBundle\AssetBundleUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\ColorObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectTypeAttribute.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\ILRuntimeCrossBindingEditorWindowBase.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\ILRuntimeEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\Vector2IntObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\UnityEngineObjectObjectType.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\Model\NewModelViewModel.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\Model\NewHotfixViewModel.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\Template\NewModelViewModel.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\Template\NewHotfixViewModel.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\LongObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\MenuTree\AEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\BoundsObjectType.cs" />
@@ -85,7 +83,7 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\Roslyn\BuildType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Build\BuildUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\BoolObjectType.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\Model\NewModelPanel.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\Template\NewModelPanel.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Excel\Cell.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\AnimationCurveObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Preprocess\PreprocessUtil.cs" />
@@ -102,17 +100,19 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\Vector2ObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\StringObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\LayerEditorWindowBase.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\Util\Excel\ConfigType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\LogConfig\LogConfig.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\IObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\TagEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\MenuTree\MenuEditorWindow.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\MenuItem\Lcc\LccMenuItem.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\Model\NewHotfixPanel.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\Template\NewHotfixPanel.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\ListObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\Vector4ObjectType.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Editor\Unity.Editor.asmdef" />
+     <None Include="Assets\Editor\Runtime\Core\Template\ConfigTemplate.txt" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\2020.1.8f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -314,18 +314,6 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="NPOI">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.dll</HintPath>
-    </Reference>
-    <Reference Include="NPOI.OOXML">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.OOXML.dll</HintPath>
-    </Reference>
-    <Reference Include="NPOI.OpenXml4Net">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.OpenXml4Net.dll</HintPath>
-    </Reference>
-    <Reference Include="NPOI.OpenXmlFormats">
-      <HintPath>Assets\Plugins\NPOI\net45\NPOI.OpenXmlFormats.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp">
       <HintPath>Assets\Plugins\Roslyn\Microsoft.CodeAnalysis.CSharp.dll</HintPath>
     </Reference>
@@ -376,6 +364,24 @@
     </Reference>
     <Reference Include="ILRuntime.Mono.Cecil.Pdb">
       <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.7\Plugins\ILRuntime.Mono.Cecil.Pdb.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI">
+      <HintPath>Assets\Plugins\NPOI\NPOI.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats">
+      <HintPath>Assets\Plugins\NPOI\NPOI.OpenXmlFormats.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OOXML">
+      <HintPath>Assets\Plugins\NPOI\NPOI.OOXML.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net">
+      <HintPath>Assets\Plugins\NPOI\NPOI.OpenXml4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="BouncyCastle.Crypto">
+      <HintPath>Assets\Plugins\BouncyCastle\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>Assets\Plugins\SharpZipLib\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
