--- a/Assets/Editor/Unity.Editor.asmdef
+++ b/Assets/Editor/Unity.Editor.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "Unity.Editor",
+    "rootNamespace": "",
     "references": [
         "GUID:7a1fa966b0ea23f40a6a4dc4dab1e297",
         "GUID:dd2a4188e8935ed40955e4cca5467075",
