--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -52,9 +52,6 @@
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2020.3.14f1c1</UnityVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\AssetBundle\AssetBundleManager.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\Timer\TimerManager.cs" />
@@ -200,6 +197,8 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Async\MethodBuilder\AsyncETVoidMethodBuilder.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Path\PathType.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\Timer\TimerType.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Awaiter\AssetBundleRequestAwaiter.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Action\ActionWrap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\Unity.Model.asmdef" />
